parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ERROR_TYPE

Grammar

Rule 0     S' -> all_stacktraces
Rule 1     all_stacktraces -> error_info error_op callstack location callstack frame_objects_str frame_objects hint
Rule 2     all_stacktraces -> error_info error_op callstack located_region operation callstack
Rule 3     all_stacktraces -> error_info error_op callstack located_region operation callstack operation callstack
Rule 4     all_stacktraces -> error_info error_op callstack located_region
Rule 5     all_stacktraces -> leak_sanitizer
Rule 6     all_stacktraces -> error_info error_op callstack
Rule 7     leak_sanitizer -> error_info leak callstack
Rule 8     leak_sanitizer -> leak_sanitizer leak callstack
Rule 9     error_info -> EQUAL NUMBER EQUAL ASCII COLON SPACE SANITIZER COLON SPACE SANITIZER_DESC SPACE ASCII SPACE ASCII SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE ADDRESS SPACE ASCII SPACE ADDRESS SPACE ASCII SPACE ADDRESS NEWLINE
Rule 10    error_info -> EQUAL NUMBER EQUAL ASCII COLON SPACE SANITIZER COLON SPACE ASCII SPACE ASCII SPACE ASCII NEWLINE
Rule 11    error_op -> ASCII SPACE ASCII SPACE ASCII SPACE NUMBER SPACE ASCII SPACE ADDRESS SPACE ASCII SPACE ASCII NEWLINE SPACES
Rule 12    callstack -> callstack_elem
Rule 13    callstack -> callstack callstack_elem
Rule 14    callstack_elem -> HASH NUMBER SPACE ADDRESS SPACE FUNCTION place NEWLINE SPACES
Rule 15    callstack_elem -> HASH NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place NEWLINE SPACES
Rule 16    callstack_elem -> HASH NUMBER SPACE ADDRESS SPACE FUNCTION place NEWLINE
Rule 17    callstack_elem -> HASH NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place NEWLINE
Rule 18    callstack_elem -> HASH NUMBER SPACE ADDRESS SPACE FUNCTION place
Rule 19    callstack_elem -> HASH NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place
Rule 20    place -> PATH FILENAME COLON NUMBER COLON NUMBER
Rule 21    place -> PATH FILENAME COLON NUMBER
Rule 22    place -> LPAREN PATH ASCII PLUS ADDRESS RPAREN
Rule 23    location -> ASCII SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE NUMBER SPACE ASCII SPACE ASCII NEWLINE SPACES
Rule 24    located_region -> ADDRESS SPACE ASCII SPACE ASCII SPACE NUMBER SPACE ASCII SPACE ASCII SPACE ASCII SPACE NUMBER MINUS ASCII SPACE ASCII SPACE range
Rule 25    located_region -> ADDRESS SPACE ASCII SPACE ASCII SPACE NUMBER SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE NUMBER MINUS ASCII SPACE ASCII SPACE range
Rule 26    located_region -> ADDRESS SPACE ASCII SPACE ASCII SPACE NUMBER SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE STRING SPACE LPAREN ADDRESS RPAREN SPACE ASCII SPACE ASCII SPACE NUMBER
Rule 27    located_region -> ASCII SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII DOT
Rule 28    located_region -> located_region NEWLINE
Rule 29    range -> LBRACK ADDRESS COMA ADDRESS RPAREN
Rule 30    range -> LBRACK ADDRESS COMA ADDRESS RBRACK
Rule 31    range -> LPAREN ADDRESS COMA ADDRESS RPAREN
Rule 32    range -> LPAREN ADDRESS COMA ADDRESS RBRACK
Rule 33    range -> LBRACK NUMBER COMA SPACE NUMBER RPAREN
Rule 34    range -> LBRACK NUMBER COMA SPACE NUMBER RBRACK
Rule 35    range -> LPAREN NUMBER COMA SPACE NUMBER RPAREN
Rule 36    range -> LPAREN NUMBER COMA SPACE NUMBER RBRACK
Rule 37    operation -> ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII COLON NEWLINE SPACES
Rule 38    operation -> ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII COLON NEWLINE SPACES
Rule 39    frame_objects_str -> ASCII SPACE ASCII SPACE ASCII SPACE NUMBER SPACE ASCII LPAREN ASCII RPAREN COLON NEWLINE SPACES
Rule 40    frame_objects -> frame_objects frame_object
Rule 41    frame_objects -> frame_object
Rule 42    frame_object -> range SPACE STRING SPACE LPAREN ASCII SPACE NUMBER RPAREN SPACE MSG NEWLINE
Rule 43    frame_object -> range SPACE STRING SPACE LPAREN ASCII SPACE NUMBER RPAREN SPACE MSG NEWLINE SPACES
Rule 44    hint -> HINT COLON SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII COMA SPACE ASCII SPACE ASCII SPACE ASCII NEWLINE SPACES LPAREN ASCII SPACE ASCII SPACE ASCII PLUS PLUS SPACE ASCII SPACE TIMES ASCII TIMES SPACE ASCII RPAREN
Rule 45    leak -> ASCII SPACE ASCII SPACE ASCII SPACE NUMBER SPACE ASCII LPAREN ASCII RPAREN SPACE ASCII SPACE NUMBER SPACE ASCII LPAREN ASCII RPAREN SPACE ASCII SPACE ASCII COLON NEWLINE SPACES

Terminals, with rules where they appear

ADDRESS              : 9 9 9 9 11 14 15 16 17 18 19 22 23 24 25 26 26 27 29 29 30 30 31 31 32 32
ASCII                : 9 9 9 9 9 9 9 10 10 10 10 11 11 11 11 11 11 15 15 17 17 19 19 22 23 23 23 23 23 23 23 23 23 23 23 23 24 24 24 24 24 24 24 25 25 25 25 25 25 25 25 25 26 26 26 26 26 26 26 26 26 26 26 27 27 27 27 27 37 37 37 37 37 38 38 38 38 38 38 39 39 39 39 39 42 43 44 44 44 44 44 44 44 44 44 44 44 44 44 44 44 44 44 44 44 44 44 44 44 44 45 45 45 45 45 45 45 45 45 45
COLON                : 9 9 10 10 20 20 21 37 38 39 44 45
COMA                 : 29 30 31 32 33 34 35 36 44
DOT                  : 27
EQUAL                : 9 9 10 10
ERROR_TYPE           : 
FILENAME             : 20 21
FUNCTION             : 14 16 18
HASH                 : 14 15 16 17 18 19
HINT                 : 44
LBRACK               : 29 30 33 34
LPAREN               : 22 26 31 32 35 36 39 42 43 44 45 45
MINUS                : 24 25
MSG                  : 42 43
NEWLINE              : 9 10 11 14 15 16 17 23 28 37 38 39 42 43 44 45
NUMBER               : 9 10 11 14 15 16 17 18 19 20 20 21 23 24 24 25 25 26 26 33 33 34 34 35 35 36 36 39 42 43 45 45
PATH                 : 20 21 22
PLUS                 : 22 44 44
RBRACK               : 30 32 34 36
RPAREN               : 22 26 29 31 33 35 39 42 43 44 45 45
SANITIZER            : 9 10
SANITIZER_DESC       : 9
SPACE                : 9 9 9 9 9 9 9 9 9 9 9 9 10 10 10 10 11 11 11 11 11 11 11 14 14 15 15 15 15 16 16 17 17 17 17 18 18 19 19 19 19 23 23 23 23 23 23 23 23 23 23 23 23 23 24 24 24 24 24 24 24 24 24 25 25 25 25 25 25 25 25 25 25 25 26 26 26 26 26 26 26 26 26 26 26 26 26 26 26 27 27 27 27 27 33 34 35 36 37 37 37 37 38 38 38 38 38 39 39 39 39 42 42 42 42 43 43 43 43 44 44 44 44 44 44 44 44 44 44 44 44 44 44 44 44 44 44 44 44 44 44 44 45 45 45 45 45 45 45 45 45
SPACES               : 11 14 15 23 37 38 39 43 44 45
STRING               : 26 42 43
TIMES                : 44 44
error                : 

Nonterminals, with rules where they appear

all_stacktraces      : 0
callstack            : 1 1 2 2 3 3 3 4 6 7 8 13
callstack_elem       : 12 13
error_info           : 1 2 3 4 6 7
error_op             : 1 2 3 4 6
frame_object         : 40 41
frame_objects        : 1 40
frame_objects_str    : 1
hint                 : 1
leak                 : 7 8
leak_sanitizer       : 5 8
located_region       : 2 3 4 28
location             : 1
operation            : 2 3 3
place                : 14 15 16 17 18 19
range                : 24 25 42 43

Parsing method: LALR

state 0

    (0) S' -> . all_stacktraces
    (1) all_stacktraces -> . error_info error_op callstack location callstack frame_objects_str frame_objects hint
    (2) all_stacktraces -> . error_info error_op callstack located_region operation callstack
    (3) all_stacktraces -> . error_info error_op callstack located_region operation callstack operation callstack
    (4) all_stacktraces -> . error_info error_op callstack located_region
    (5) all_stacktraces -> . leak_sanitizer
    (6) all_stacktraces -> . error_info error_op callstack
    (9) error_info -> . EQUAL NUMBER EQUAL ASCII COLON SPACE SANITIZER COLON SPACE SANITIZER_DESC SPACE ASCII SPACE ASCII SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE ADDRESS SPACE ASCII SPACE ADDRESS SPACE ASCII SPACE ADDRESS NEWLINE
    (10) error_info -> . EQUAL NUMBER EQUAL ASCII COLON SPACE SANITIZER COLON SPACE ASCII SPACE ASCII SPACE ASCII NEWLINE
    (7) leak_sanitizer -> . error_info leak callstack
    (8) leak_sanitizer -> . leak_sanitizer leak callstack

    EQUAL           shift and go to state 4

    all_stacktraces                shift and go to state 1
    error_info                     shift and go to state 2
    leak_sanitizer                 shift and go to state 3

state 1

    (0) S' -> all_stacktraces .



state 2

    (1) all_stacktraces -> error_info . error_op callstack location callstack frame_objects_str frame_objects hint
    (2) all_stacktraces -> error_info . error_op callstack located_region operation callstack
    (3) all_stacktraces -> error_info . error_op callstack located_region operation callstack operation callstack
    (4) all_stacktraces -> error_info . error_op callstack located_region
    (6) all_stacktraces -> error_info . error_op callstack
    (7) leak_sanitizer -> error_info . leak callstack
    (11) error_op -> . ASCII SPACE ASCII SPACE ASCII SPACE NUMBER SPACE ASCII SPACE ADDRESS SPACE ASCII SPACE ASCII NEWLINE SPACES
    (45) leak -> . ASCII SPACE ASCII SPACE ASCII SPACE NUMBER SPACE ASCII LPAREN ASCII RPAREN SPACE ASCII SPACE NUMBER SPACE ASCII LPAREN ASCII RPAREN SPACE ASCII SPACE ASCII COLON NEWLINE SPACES

    ASCII           shift and go to state 7

    error_op                       shift and go to state 5
    leak                           shift and go to state 6

state 3

    (5) all_stacktraces -> leak_sanitizer .
    (8) leak_sanitizer -> leak_sanitizer . leak callstack
    (45) leak -> . ASCII SPACE ASCII SPACE ASCII SPACE NUMBER SPACE ASCII LPAREN ASCII RPAREN SPACE ASCII SPACE NUMBER SPACE ASCII LPAREN ASCII RPAREN SPACE ASCII SPACE ASCII COLON NEWLINE SPACES

    $end            reduce using rule 5 (all_stacktraces -> leak_sanitizer .)
    ASCII           shift and go to state 9

    leak                           shift and go to state 8

state 4

    (9) error_info -> EQUAL . NUMBER EQUAL ASCII COLON SPACE SANITIZER COLON SPACE SANITIZER_DESC SPACE ASCII SPACE ASCII SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE ADDRESS SPACE ASCII SPACE ADDRESS SPACE ASCII SPACE ADDRESS NEWLINE
    (10) error_info -> EQUAL . NUMBER EQUAL ASCII COLON SPACE SANITIZER COLON SPACE ASCII SPACE ASCII SPACE ASCII NEWLINE

    NUMBER          shift and go to state 10


state 5

    (1) all_stacktraces -> error_info error_op . callstack location callstack frame_objects_str frame_objects hint
    (2) all_stacktraces -> error_info error_op . callstack located_region operation callstack
    (3) all_stacktraces -> error_info error_op . callstack located_region operation callstack operation callstack
    (4) all_stacktraces -> error_info error_op . callstack located_region
    (6) all_stacktraces -> error_info error_op . callstack
    (12) callstack -> . callstack_elem
    (13) callstack -> . callstack callstack_elem
    (14) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE FUNCTION place NEWLINE SPACES
    (15) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place NEWLINE SPACES
    (16) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE FUNCTION place NEWLINE
    (17) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place NEWLINE
    (18) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE FUNCTION place
    (19) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place

    HASH            shift and go to state 13

    callstack                      shift and go to state 11
    callstack_elem                 shift and go to state 12

state 6

    (7) leak_sanitizer -> error_info leak . callstack
    (12) callstack -> . callstack_elem
    (13) callstack -> . callstack callstack_elem
    (14) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE FUNCTION place NEWLINE SPACES
    (15) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place NEWLINE SPACES
    (16) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE FUNCTION place NEWLINE
    (17) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place NEWLINE
    (18) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE FUNCTION place
    (19) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place

    HASH            shift and go to state 13

    callstack                      shift and go to state 14
    callstack_elem                 shift and go to state 12

state 7

    (11) error_op -> ASCII . SPACE ASCII SPACE ASCII SPACE NUMBER SPACE ASCII SPACE ADDRESS SPACE ASCII SPACE ASCII NEWLINE SPACES
    (45) leak -> ASCII . SPACE ASCII SPACE ASCII SPACE NUMBER SPACE ASCII LPAREN ASCII RPAREN SPACE ASCII SPACE NUMBER SPACE ASCII LPAREN ASCII RPAREN SPACE ASCII SPACE ASCII COLON NEWLINE SPACES

    SPACE           shift and go to state 15


state 8

    (8) leak_sanitizer -> leak_sanitizer leak . callstack
    (12) callstack -> . callstack_elem
    (13) callstack -> . callstack callstack_elem
    (14) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE FUNCTION place NEWLINE SPACES
    (15) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place NEWLINE SPACES
    (16) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE FUNCTION place NEWLINE
    (17) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place NEWLINE
    (18) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE FUNCTION place
    (19) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place

    HASH            shift and go to state 13

    callstack                      shift and go to state 16
    callstack_elem                 shift and go to state 12

state 9

    (45) leak -> ASCII . SPACE ASCII SPACE ASCII SPACE NUMBER SPACE ASCII LPAREN ASCII RPAREN SPACE ASCII SPACE NUMBER SPACE ASCII LPAREN ASCII RPAREN SPACE ASCII SPACE ASCII COLON NEWLINE SPACES

    SPACE           shift and go to state 17


state 10

    (9) error_info -> EQUAL NUMBER . EQUAL ASCII COLON SPACE SANITIZER COLON SPACE SANITIZER_DESC SPACE ASCII SPACE ASCII SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE ADDRESS SPACE ASCII SPACE ADDRESS SPACE ASCII SPACE ADDRESS NEWLINE
    (10) error_info -> EQUAL NUMBER . EQUAL ASCII COLON SPACE SANITIZER COLON SPACE ASCII SPACE ASCII SPACE ASCII NEWLINE

    EQUAL           shift and go to state 18


state 11

    (1) all_stacktraces -> error_info error_op callstack . location callstack frame_objects_str frame_objects hint
    (2) all_stacktraces -> error_info error_op callstack . located_region operation callstack
    (3) all_stacktraces -> error_info error_op callstack . located_region operation callstack operation callstack
    (4) all_stacktraces -> error_info error_op callstack . located_region
    (6) all_stacktraces -> error_info error_op callstack .
    (13) callstack -> callstack . callstack_elem
    (23) location -> . ASCII SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE NUMBER SPACE ASCII SPACE ASCII NEWLINE SPACES
    (24) located_region -> . ADDRESS SPACE ASCII SPACE ASCII SPACE NUMBER SPACE ASCII SPACE ASCII SPACE ASCII SPACE NUMBER MINUS ASCII SPACE ASCII SPACE range
    (25) located_region -> . ADDRESS SPACE ASCII SPACE ASCII SPACE NUMBER SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE NUMBER MINUS ASCII SPACE ASCII SPACE range
    (26) located_region -> . ADDRESS SPACE ASCII SPACE ASCII SPACE NUMBER SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE STRING SPACE LPAREN ADDRESS RPAREN SPACE ASCII SPACE ASCII SPACE NUMBER
    (27) located_region -> . ASCII SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII DOT
    (28) located_region -> . located_region NEWLINE
    (14) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE FUNCTION place NEWLINE SPACES
    (15) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place NEWLINE SPACES
    (16) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE FUNCTION place NEWLINE
    (17) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place NEWLINE
    (18) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE FUNCTION place
    (19) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place

    $end            reduce using rule 6 (all_stacktraces -> error_info error_op callstack .)
    ASCII           shift and go to state 22
    ADDRESS         shift and go to state 23
    HASH            shift and go to state 13

    location                       shift and go to state 19
    located_region                 shift and go to state 20
    callstack_elem                 shift and go to state 21

state 12

    (12) callstack -> callstack_elem .

    ASCII           reduce using rule 12 (callstack -> callstack_elem .)
    ADDRESS         reduce using rule 12 (callstack -> callstack_elem .)
    HASH            reduce using rule 12 (callstack -> callstack_elem .)
    $end            reduce using rule 12 (callstack -> callstack_elem .)


state 13

    (14) callstack_elem -> HASH . NUMBER SPACE ADDRESS SPACE FUNCTION place NEWLINE SPACES
    (15) callstack_elem -> HASH . NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place NEWLINE SPACES
    (16) callstack_elem -> HASH . NUMBER SPACE ADDRESS SPACE FUNCTION place NEWLINE
    (17) callstack_elem -> HASH . NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place NEWLINE
    (18) callstack_elem -> HASH . NUMBER SPACE ADDRESS SPACE FUNCTION place
    (19) callstack_elem -> HASH . NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place

    NUMBER          shift and go to state 24


state 14

    (7) leak_sanitizer -> error_info leak callstack .
    (13) callstack -> callstack . callstack_elem
    (14) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE FUNCTION place NEWLINE SPACES
    (15) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place NEWLINE SPACES
    (16) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE FUNCTION place NEWLINE
    (17) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place NEWLINE
    (18) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE FUNCTION place
    (19) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place

    ASCII           reduce using rule 7 (leak_sanitizer -> error_info leak callstack .)
    $end            reduce using rule 7 (leak_sanitizer -> error_info leak callstack .)
    HASH            shift and go to state 13

    callstack_elem                 shift and go to state 21

state 15

    (11) error_op -> ASCII SPACE . ASCII SPACE ASCII SPACE NUMBER SPACE ASCII SPACE ADDRESS SPACE ASCII SPACE ASCII NEWLINE SPACES
    (45) leak -> ASCII SPACE . ASCII SPACE ASCII SPACE NUMBER SPACE ASCII LPAREN ASCII RPAREN SPACE ASCII SPACE NUMBER SPACE ASCII LPAREN ASCII RPAREN SPACE ASCII SPACE ASCII COLON NEWLINE SPACES

    ASCII           shift and go to state 25


state 16

    (8) leak_sanitizer -> leak_sanitizer leak callstack .
    (13) callstack -> callstack . callstack_elem
    (14) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE FUNCTION place NEWLINE SPACES
    (15) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place NEWLINE SPACES
    (16) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE FUNCTION place NEWLINE
    (17) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place NEWLINE
    (18) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE FUNCTION place
    (19) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place

    ASCII           reduce using rule 8 (leak_sanitizer -> leak_sanitizer leak callstack .)
    $end            reduce using rule 8 (leak_sanitizer -> leak_sanitizer leak callstack .)
    HASH            shift and go to state 13

    callstack_elem                 shift and go to state 21

state 17

    (45) leak -> ASCII SPACE . ASCII SPACE ASCII SPACE NUMBER SPACE ASCII LPAREN ASCII RPAREN SPACE ASCII SPACE NUMBER SPACE ASCII LPAREN ASCII RPAREN SPACE ASCII SPACE ASCII COLON NEWLINE SPACES

    ASCII           shift and go to state 26


state 18

    (9) error_info -> EQUAL NUMBER EQUAL . ASCII COLON SPACE SANITIZER COLON SPACE SANITIZER_DESC SPACE ASCII SPACE ASCII SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE ADDRESS SPACE ASCII SPACE ADDRESS SPACE ASCII SPACE ADDRESS NEWLINE
    (10) error_info -> EQUAL NUMBER EQUAL . ASCII COLON SPACE SANITIZER COLON SPACE ASCII SPACE ASCII SPACE ASCII NEWLINE

    ASCII           shift and go to state 27


state 19

    (1) all_stacktraces -> error_info error_op callstack location . callstack frame_objects_str frame_objects hint
    (12) callstack -> . callstack_elem
    (13) callstack -> . callstack callstack_elem
    (14) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE FUNCTION place NEWLINE SPACES
    (15) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place NEWLINE SPACES
    (16) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE FUNCTION place NEWLINE
    (17) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place NEWLINE
    (18) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE FUNCTION place
    (19) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place

    HASH            shift and go to state 13

    callstack                      shift and go to state 28
    callstack_elem                 shift and go to state 12

state 20

    (2) all_stacktraces -> error_info error_op callstack located_region . operation callstack
    (3) all_stacktraces -> error_info error_op callstack located_region . operation callstack operation callstack
    (4) all_stacktraces -> error_info error_op callstack located_region .
    (28) located_region -> located_region . NEWLINE
    (37) operation -> . ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII COLON NEWLINE SPACES
    (38) operation -> . ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII COLON NEWLINE SPACES

    $end            reduce using rule 4 (all_stacktraces -> error_info error_op callstack located_region .)
    NEWLINE         shift and go to state 30
    ASCII           shift and go to state 31

    operation                      shift and go to state 29

state 21

    (13) callstack -> callstack callstack_elem .

    ASCII           reduce using rule 13 (callstack -> callstack callstack_elem .)
    ADDRESS         reduce using rule 13 (callstack -> callstack callstack_elem .)
    HASH            reduce using rule 13 (callstack -> callstack callstack_elem .)
    $end            reduce using rule 13 (callstack -> callstack callstack_elem .)


state 22

    (23) location -> ASCII . SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE NUMBER SPACE ASCII SPACE ASCII NEWLINE SPACES
    (27) located_region -> ASCII . SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII DOT

    SPACE           shift and go to state 32


state 23

    (24) located_region -> ADDRESS . SPACE ASCII SPACE ASCII SPACE NUMBER SPACE ASCII SPACE ASCII SPACE ASCII SPACE NUMBER MINUS ASCII SPACE ASCII SPACE range
    (25) located_region -> ADDRESS . SPACE ASCII SPACE ASCII SPACE NUMBER SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE NUMBER MINUS ASCII SPACE ASCII SPACE range
    (26) located_region -> ADDRESS . SPACE ASCII SPACE ASCII SPACE NUMBER SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE ASCII SPACE STRING SPACE LPAREN ADDRESS RPAREN SPACE ASCII SPACE ASCII SPACE NUMBER

    SPACE           shift and go to state 33


state 24

    (14) callstack_elem -> HASH NUMBER . SPACE ADDRESS SPACE FUNCTION place NEWLINE SPACES
    (15) callstack_elem -> HASH NUMBER . SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place NEWLINE SPACES
    (16) callstack_elem -> HASH NUMBER . SPACE ADDRESS SPACE FUNCTION place NEWLINE
    (17) callstack_elem -> HASH NUMBER . SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place NEWLINE
    (18) callstack_elem -> HASH NUMBER . SPACE ADDRESS SPACE FUNCTION place
    (19) callstack_elem -> HASH NUMBER . SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place

    SPACE           shift and go to state 34


state 25

    (11) error_op -> ASCII SPACE ASCII . SPACE ASCII SPACE NUMBER SPACE ASCII SPACE ADDRESS SPACE ASCII SPACE ASCII NEWLINE SPACES
    (45) leak -> ASCII SPACE ASCII . SPACE ASCII SPACE NUMBER SPACE ASCII LPAREN ASCII RPAREN SPACE ASCII SPACE NUMBER SPACE ASCII LPAREN ASCII RPAREN SPACE ASCII SPACE ASCII COLON NEWLINE SPACES

    SPACE           shift and go to state 35


state 26

    (45) leak -> ASCII SPACE ASCII . SPACE ASCII SPACE NUMBER SPACE ASCII LPAREN ASCII RPAREN SPACE ASCII SPACE NUMBER SPACE ASCII LPAREN ASCII RPAREN SPACE ASCII SPACE ASCII COLON NEWLINE SPACES

    SPACE           shift and go to state 36


state 27

    (9) error_info -> EQUAL NUMBER EQUAL ASCII . COLON SPACE SANITIZER COLON SPACE SANITIZER_DESC SPACE ASCII SPACE ASCII SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE ADDRESS SPACE ASCII SPACE ADDRESS SPACE ASCII SPACE ADDRESS NEWLINE
    (10) error_info -> EQUAL NUMBER EQUAL ASCII . COLON SPACE SANITIZER COLON SPACE ASCII SPACE ASCII SPACE ASCII NEWLINE

    COLON           shift and go to state 37


state 28

    (1) all_stacktraces -> error_info error_op callstack location callstack . frame_objects_str frame_objects hint
    (13) callstack -> callstack . callstack_elem
    (39) frame_objects_str -> . ASCII SPACE ASCII SPACE ASCII SPACE NUMBER SPACE ASCII LPAREN ASCII RPAREN COLON NEWLINE SPACES
    (14) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE FUNCTION place NEWLINE SPACES
    (15) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place NEWLINE SPACES
    (16) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE FUNCTION place NEWLINE
    (17) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place NEWLINE
    (18) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE FUNCTION place
    (19) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place

    ASCII           shift and go to state 39
    HASH            shift and go to state 13

    frame_objects_str              shift and go to state 38
    callstack_elem                 shift and go to state 21

state 29

    (2) all_stacktraces -> error_info error_op callstack located_region operation . callstack
    (3) all_stacktraces -> error_info error_op callstack located_region operation . callstack operation callstack
    (12) callstack -> . callstack_elem
    (13) callstack -> . callstack callstack_elem
    (14) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE FUNCTION place NEWLINE SPACES
    (15) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place NEWLINE SPACES
    (16) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE FUNCTION place NEWLINE
    (17) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place NEWLINE
    (18) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE FUNCTION place
    (19) callstack_elem -> . HASH NUMBER SPACE ADDRESS SPACE ASCII SPACE ASCII SPACE place

    HASH            shift and go to state 13

    callstack                      shift and go to state 40
    callstack_elem                 shift and go to state 12

state 30

    (28) located_region -> located_region NEWLINE .
